style.css
/*=========================
Global styles
==========================*/

.container-fluid {
   margin-top: 40px;
   padding: 0 0;
}

a:link, a:visited {
  text-decoration: none;
  color: black;
}

a:hover {
  text-decoration: none;
  color: #ff0088;
}

.header {
  text-align: center;
  font-family: 'Fredericka the Great', cursive;
 }

.next-section {
  font-family: 'Mate SC', cursive;
  font-size: 20px;
  line-height: 0;
}

.next-label:hover {
  color: #ff0088;
}

.tap {
  display: none;
}

.code-landing, .code-work {
  min-height: 100vh;
  background: url('images/code.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  z-index: -1;
  background-blend-mode: screen;
  background-color: #dddddd;
}
/*===========================
Landing Page
===========================*/

.name {
  padding-top: 35px;
}

.code-landing {
  margin-top: -40px;
}

.name-header {
  display: flex;
  justify-content: center;
}

.about-me {
  margin: 0;
  border-radius: 100%;
  border: 1px solid black;
  height: 170px;
  width: 165px;
  z-index: 2;
}

.mimi, .klein {
  font-size: 50px;
  margin-top: 50px;
}

.mimi {
  padding-right: 5%;
 }

 .klein {
  padding-left: 5%;
}

.web-dev {
  font-family: 'Fredericka the Great', cursive;
  font-size: 50px;
  text-align: center;
}

 nav {
  font-size: 30px;
  font-family: 'Mate SC', cursive;
  text-decoration: none;
}

.about {
  margin-top: 5%;
  margin-left: 30%;
}

.portfolio-link {
  margin-top: 5%;
  margin-left: 46%;
}

.contact {
  margin-top: 5%;
  margin-left: 63%;
}

 /*=============================
 About
 ==============================*/


.biography {
  margin-top: 250px;
  display: flex;
  justify-content: space-between;
}

.hi {
  margin-bottom: 30px;
}

.tap {
  display: none;
}

.grid-container {
  margin-left: 25px;
}

.img-grid {
  height: 170px;
  width: 170px;
}

.bio {
  order: 2;
  width: 45%;
  text-align: justify;
  line-height: 30px;
  font-family: 'Quicksand', sans-serif;
  font-size: 18px;
  margin-right: 35px;
 }

.img-div:hover .caption {
  visibility: visible;
}

.line {
  border-top: 1px dotted black;
}

.skills, ul {
  margin-top: 30px;
  font-family: 'Mate SC', cursive;
  font-size: 18px;
}

.skills {
  -webkit-column-count: 2;
       -moz-column-count: 2;
  column-count: 2;
  list-style-type: none;
  text-align: center;
}

/*================================
Work
=================================*/

#portfolio {
  margin-top: 300px;
  padding-top: 20px;
}

.portfolio-header {
  margin-bottom: -30px;
}

.work-container {
  display: flex;
  justify-content: space-around;
  margin-top: 50px;
}

.work-links {
  height: 130px;
  width: 190px;
}

.top-work {
  margin-bottom: 50px;
}

.work-img, .work-caption {
  height: 22vh;
  width: 33vh;
}

.work-img {
  border: 3px solid #ffff66;
}

.portfolio {
 margin-top: 150px;
 margin-bottom: 300px;
}

.work-caption {
  font-size: 13px;
  font-family: 'Mate SC', cursive;
}

.link {
  display: inline;
  border: 1px solid black;
  border-radius: 10%;
  padding: 3%;
  font-family: 'Mate SC', cursive;
  font-size: 16px;
  background: white;
  box-shadow: 5px 5px 5px #555555;
  color: black;
  margin-left: 20px;
  }

.link:hover {
  background: #ffffcc;
  color: black;
 }

.tech-list {
  margin-top: -6px;
  list-style: none;
  margin-left: -30px;
}

.next-contact {
  margin-top: -100px;
}

.next-contact:not(*:root) {
  margin-top: -400px;
}

/*================================
Contact
================================*/

#contact {
  height: 300px
  width: 300px;
  margin-top: 400px;
  margin-bottom: 400px;
}

.contact-links {
  margin-top: 200px;
}

.contact-link {
  margin-right: 30px;
  margin-left: 30px;
}

/*==============================
Footer
==============================*/

footer {
  margin-top: -40px;
}

/*=============================
Transparent caption overlay
=============================*/

figure {
  display: block;
  position: relative;
  float: left;
  overflow: hidden;
  margin: 0 20px 20px 0;
}

figcaption {
  font-family: 'Quicksand', sans-serif;
  font-size: 16px;
  position: absolute;
  background: black;
  background: rgba(0,0,0,0.75);
  color: white;
  padding: 10px 20px;
  opacity: 0;
  -webkit-transition: all 0.6s ease;
  -moz-transition:    all 0.6s ease;
  -o-transition:      all 0.6s ease;
}

figure:hover figcaption {
  opacity: 1;
}

figure:before {
  position: absolute;
  font-weight: 800;
  background: black;
  background: rgba(255,255,255,0.75);
  text-shadow: 0 0 5px white;
  color: black;
  width: 24px;
  height: 24px;
  -webkit-border-radius: 12px;
  -moz-border-radius:    12px;
  border-radius:         12px;
  text-align: center;
  font-size: 14px;
  line-height: 24px;
  -moz-transition: all 0.6s ease;
  opacity: 0.75;
}

figure:hover:before {
  opacity: 0;
}

.cap:before {  bottom: 10px; left: 10px; }
.cap figcaption { bottom: 0; left: -30%; }
.cap:hover figcaption { left: 0; }

.cap-bot:before { bottom: 10px; left: 10px; }
.cap-bot figcaption { left: 0; bottom: -30%;}
.cap-bot:hover figcaption { bottom: 0; }


/*=================================
Mobile
=================================*/

@media (max-width: 500px) {
  .next-section {
    font-size: 16px;
  }

  .name-header {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .about-me {
    height: 100px;
    width: 100px;
  }

  .mimi, .klein {
    font-size: 25px;
    margin-top: 50px;
    height: 50px;
    width: 100px;
    padding: 0;
  }

  .klein {
    margin-top: 30px;
  }

  .mimi-klein {
    display: flex;
    justify-content: space-around;
  }

  .web-dev {
    font-size: 25px;
  }

  nav {
    font-size: 25px;
    margin-top: 40px;
  }

  .about, .portfolio-link, .contact {
    margin: 0;
  }

  .biography {
    display: flex;
    flex-direction: column;
  }

  .bio {
    order: -1;
    text-align: center;
    line-height: 30px;
    font-size: 15px;
    width: 85%;
  }

  .img-grid {
    height: 100px;
    width: 100px;
  }

  .tap {
    display: block;
    text-align: center;
    margin-top: 25px;
    margin-bottom: 0;
    font-size: 10px;
  }

  .work-section {
    margin-top: 10px;
  }

  .work-img, .work-caption {
    height: 18vh;
    width: 37vw;
    font-size: 10px;
  }

  body:last-child .next-contact, x:-moz-any-link {
    padding-top: 355px;
  }
  
  .next-contact:not(*:root) {
    padding-top: 50px;
  }
}

